Design login component

--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -1,4 +1,8 @@
-<div>
-    <input [(ngModel)]="channel" placeholder="channel">
-    <button (click)="onClick()">Launch</button>
+<a class="icon" href="{{repositoryUrl}}">
+    <img src="../../assets/svg/github.svg">
+</a>
+<div class="card">
+    <h3>Welcome!</h3>
+    <p>This is a very early version. Feel free to report any issue on GitHub.</p>
+    <button (click)="launchBot()">Launch</button>
 </div>
