--- a/src/client/app/login/login.component.css
+++ b/src/client/app/login/login.component.css
@@ -2,30 +2,21 @@
     background-color: #ffffff;
     border-radius: 2px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    display: block;
-    height: 220px;
-    margin: auto;
-    padding: 24px;
-    position: absolute;
-    text-align: center;
-    top: 0; right: 0; bottom: 0; left: 0;
+    margin-top: 56px;
+    padding: 16px 24px 24px 24px;
     width: 320px;
 }
 
-.card > button {
-    height: 40px;
-    bottom: 40px; left: 25%;
-    position: absolute;
-    width: 50%;
+.card > p:first-of-type {
+    padding-top: 8px;
 }
 
-.card > h3 {
-    margin-bottom: 32px;
+.card > p {
+    padding-bottom: 8px;
 }
 
 .icon {
-    position: absolute;
-    top: 24px; right: 24px;
+    margin: 24px 24px 0 0;
 }
 
 .icon > img {
