refactor(angular): update to rc.1, adapt structure

--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <a class="icon pull-right" href="{{repositoryUrl}}">
-            <img src="../../assets/svg/github.svg">
+            <img src="../../assets/img/icons/github.svg">
         </a>
     </div>
     <div class="row">
