--- a/src/client/app/shared/toolbar/toolbar.component.css
+++ b/src/client/app/shared/toolbar/toolbar.component.css
@@ -2,10 +2,20 @@ header {
     background-color: #f6f6f6;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     height: 64px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 
-header img {
-    border: 0;
+header > .logout {
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+header > .ribbon {
     position: absolute;
     right: 0;
     top: 0;
