--- a/src/client/app/app.component.html
+++ b/src/client/app/app.component.html
@@ -1,3 +1,3 @@
-<twitchr-toolbar></twitchr-toolbar>
-<twitchr-sidenav></twitchr-sidenav>
+<twitchr-sidenav *ngIf="isAuthenticated"></twitchr-sidenav>
+<twitchr-toolbar [isAuthenticated]="isAuthenticated"></twitchr-toolbar>
 <router-outlet></router-outlet>
