--- a/src/client/app/shared/sidenav/sidenav.component.css
+++ b/src/client/app/shared/sidenav/sidenav.component.css
@@ -1,20 +1,38 @@
 nav {
     background-color: #f6f6f6;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     height: 100vh;
     left: 0;
-    overflow-x: hidden;
     position: fixed;
-    top: 64px;
+    top: 0;
     width: 256px;
+    z-index: 1;
 }
 
-nav > .pause {
+nav > .header {
+    background-color: #009688;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    height: 220px;
+    width: 100%;
+}
+
+nav > .state {
     background-color: #673AB7;
     border: 0;
     border-radius: 50%;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    color: #ffffff;
     height: 48px;
+    left: 104px;
+    position: fixed;
+    top: 196px;
     width: 48px;
-    margin: 32px 0;
+}
+
+nav > .state:hover {
+    background-color: #512DA8;
+}
+
+nav > .state:focus {
+    background-color: #4527A0;
+    outline: none;
 }
