--- a/src/client/app/shared/toolbar/toolbar.component.css
+++ b/src/client/app/shared/toolbar/toolbar.component.css
@@ -3,20 +3,20 @@ header {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     height: 64px;
     position: fixed;
+    right: 0;
     top: 0;
     width: 100%;
-    z-index: 1;
 }
 
 header > .logout {
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     right: 20px;
     top: 20px;
 }
 
 header > .ribbon {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
 }
@@ -27,4 +27,8 @@ header > p {
     line-height: 64px;
     margin: 0;
     padding-left: 32px;
+}
+
+.authenticated {
+    width: calc(100% - 256px);
 }
