--- a/src/client/app/shared/toolbar/toolbar.component.html
+++ b/src/client/app/shared/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<header>
+<header [ngClass]="{authenticated: isAuthenticated}">
     <p>twitchr</p>
     <a class="ribbon" *ngIf="!isAuthenticated" href="https://github.com/twitchr/twitchr">
         <img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
