--- a/src/client/app/shared/sidenav/sidenav.component.css
+++ b/src/client/app/shared/sidenav/sidenav.component.css
@@ -16,6 +16,28 @@ nav > .header {
     width: 100%;
 }
 
+nav > .menu {
+    font-size: 12pt;
+    list-style: none;
+    padding-left: 0;
+}
+
+nav > .menu > li {
+    background: url("../../../assets/icons/list.svg") no-repeat 24px 16px;
+    cursor: pointer;
+    padding: 17px 0 16px 64px;
+}
+
+nav > .menu > li.active {
+    background-color: #e8e8e8;
+    color: #673AB7;
+    font-weight: bold;
+}
+
+nav > .menu > li:hover {
+    background-color: #e8e8e8;
+}
+
 nav > .state {
     background-color: #673AB7;
     border: 0;
@@ -28,6 +50,14 @@ nav > .state {
     width: 48px;
 }
 
+nav > .state[disabled] {
+    opacity: 0.75;
+}
+
+nav > .state[disabled]:hover, nav > .state[disabled]:focus {
+    background-color: #673AB7;
+}
+
 nav > .state:hover {
     background-color: #512DA8;
 }
@@ -35,4 +65,12 @@ nav > .state:hover {
 nav > .state:focus {
     background-color: #4527A0;
     outline: none;
+}
+
+nav > .user {
+    font-size: 13pt;
+    font-style: italic;
+    font-weight: bold;
+    margin: 40px 0 24px 0;
+    text-align: center;
 }
