--- a/src/client/app/shared/sidenav/sidenav.component.css
+++ b/src/client/app/shared/sidenav/sidenav.component.css
@@ -34,6 +34,11 @@ nav > .menu > li.active {
     font-weight: bold;
 }
 
+nav > .menu > li:focus {
+    background-color: #e8e8e8;
+    outline: none;
+}
+
 nav > .menu > li:hover {
     background-color: #e8e8e8;
 }
